# termtalk

./: .gitignore  LICENSE  Makefile  README.md
elastic-manager/: Cargo.toml  Makefile
elastic-manager/index_mappings/: direct_chats.json  rooms.json  users.json
elastic-manager/src/: main.rs
termtalk-api/: .env  Cargo.toml  Makefile
termtalk-api/src/: constants.rs  main.rs  routes.rs  session.rs
termtalk-api/src/chat_server/: chat_server.rs
termtalk-api/src/chat_server/handlers/: connect.rs  debug_server.rs  disconnect.rs  is_user_online.rs  join_direct.rs  join_room.rs  list_rooms.rs  list_users_in_room.rs  list_users_online.rs  mod.rs  send_client_message.rs  session_message.rs  update_session_status.rs
termtalk-api/src/custom_middleware/: auth.rs
termtalk-api/src/data_stores/: mod.rs
termtalk-api/src/data_stores/elastic/: store.rs  users.rs
termtalk-api/src/data_stores/redis/: mod.rs  publish_chat_messages.rs  rooms_hash_map.rs  rooms_online_users_set.rs  store.rs  users_online_set.rs
termtalk-api/src/jwt/: lib.rs
termtalk-api/src/models/: elastic.rs  mod.rs  request_models.rs  rooms.rs  users.rs
termtalk-cli/: .env  Cargo.toml  Makefile
termtalk-cli/src/: main.rs
