[package]
name = "elastic-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7.14.0-alpha.1"
serde_json = "1.0.79"
serde = "1.0.136"
log = "0.4"
env_logger = "0.9.0"
futures = "0.3"
tokio = { version = "1.17.0", features = ["full"] }
