[package]
name = "termtalk-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "=0.12"
actix-redis = "0.11"
actix-web = "4.0.1"

env_logger = "0.9.0"
dotenv = "0.15.0"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
log = "0.4"
redis-async = { version = "0.12.1", default_features = false, features = ["tokio10"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }


actix-web-actors = "4.1.0"
actix-codec = "0.5"
actix-files = "0.6"
tokio = { version = "1.13.1", features = ["full"] }
rand = "0.8"
serde_json = "1"
tokio-util = { version = "=0.6", features = ["codec"] }
byteorder = "1.2"
elasticsearch = "7.14.0-alpha.1"
rust-crypto = "^0.2"
base64-url = "1.4.13"
bcrypt = "0.12.1"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]